--- a/ConfigurationFiles/deployment.yaml
+++ b/ConfigurationFiles/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: netflix-app
+  name: net-app
   labels:
-    app: netflix-app
+    app: net-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: netflix-app
+      app: net-app
   template:
     metadata:
       labels:
-        app: netflix-app
+        app: net-app
     spec:
       containers:
-      - name: netflix-app
-        image: gauris17/netflix:latest
+      - name: net-app
+        image: master101/net_clone:latest
         ports:
         - containerPort: 3000
