--- a/ConfigurationFiles/service.yaml
+++ b/ConfigurationFiles/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: netflix-app
+  name: net-app
   labels:
-    app: netflix-app
+    app: net-app
 spec:
   ports:
   - name: http
@@ -11,5 +11,5 @@ spec:
     protocol: TCP
     targetPort: 3000
   selector:
-    app: netflix-app
+    app: net-app
   type: LoadBalancer
